--- a/src/resources/views/register.hbs
+++ b/src/resources/views/register.hbs
@@ -13,7 +13,7 @@
             <div class="col-lg-4 col-md-6 banner-right" style="margin-top:6rem">
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="flight" role="tabpanel" aria-labelledby="flight-tab">
-                    <form class="form-wrap">
+                    <form id="form-register" action="" method="post" class="form-wrap">
                         <div class="mt-20">
                             <p class="typo-list" style="text-align: left;">Email</p>
                             <input class="form-control" type="text" name="email" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" required class="single-input">
@@ -27,7 +27,7 @@
                             <input class="form-control" type="password" name="confirmPassword" placeholder="Xác nhận mật khẩu" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Xác nhận mật khẩu'" required class="single-input">
                         </div>
                         <a href="login" class="">Đã có tài khoản? Đăng nhập</a>
-                        <a href="#" class="primary-btn text-uppercase mt-10">Đăng ký</a>									
+                        <button id="btn-register" type="submit" class="primary-btn text-uppercase mt-10">Đăng ký</button>									
                     </form>
                     </div>
                 </div>
@@ -36,3 +36,25 @@
     </div>					
 </section>
 <!-- End banner Area -->		
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        $('#btn-register').on('click', function(event){
+            event.preventDefault()
+            $.ajax({
+                url: '',
+                method: 'post',
+                data: $('#form-register').serialize(),
+                success: function (res) {
+                    if (res) {
+                        alert(res)
+                    }
+                    else {
+                        window.location.href = '/user'
+                    }
+                }
+            })
+        })
+    })
+</script>
