--- a/src/resources/views/user.hbs
+++ b/src/resources/views/user.hbs
@@ -23,12 +23,13 @@
                 <div class="card-body">
                     <div class="flex mb-4">
                         <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar" class="rounded-circle img-fluid" style="width: 70px; height: 70px">	
-                        <h5 class="my-1 ml-3">Lê Khánh An</h5>
+                        <h5 class="my-1 ml-3">{{name}}</h5>
                     </div>
-                    <a href="user/edit" class="text-muted mb-1 block pl-2">Cập nhật thông tin</a>
+                    <a href="user/edit" class="text-muted mb-1 block pl-2">Cập nhật thông tin</a><br>
+                    <a href="login/logout" class="text-muted mb-1 block pl-2">Đăng xuất</a>
                 </div>
             </div>
-        </div>
+        </div> 
         <!-- User Sidebar End -->
 
         <!-- Flights List Start -->
