--- a/src/resources/views/blog.hbs
+++ b/src/resources/views/blog.hbs
@@ -36,7 +36,7 @@
                         <div class="feature-img">
                             <img class="img-fluid" src="{{this.image}}" alt="">
                         </div>
-                        <a class="posts-title" href="blog-single.html"><h3>{{this.header}}</h3></a>
+                        <a class="posts-title" href="/blog/{{this.article_id}}"><h3>{{this.header}}</h3></a>
                         <p class="excert hide-content-3">
                             {{this.content}}	
                         </p>
