--- a/src/resources/views/blog.hbs
+++ b/src/resources/views/blog.hbs
@@ -10,7 +10,7 @@
                 <p class="text-white">
                     Khám phá nhiều hơn, trải nghiệm nhiều hơn
                 </p>
-                <a href="#start-content" class="primary-btn">Xem nhiều hơn</a>
+                <a href="#start-content" id="view-blogs" class="primary-btn">Xem nhiều hơn</a>
             </div>	
         </div>
     </div>
