--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -7,7 +7,7 @@
                 <h1 class="text-white">
                     Liên hệ chúng tôi				
                 </h1>	
-                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contact.html"> Contact Us</a></p>
+                <p class="text-white link-nav"><a href="/home">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href=""> Contact Us</a></p>
             </div>	
         </div>
     </div>
