--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -47,7 +47,7 @@
                         alert(res)
                     }
                     else {
-                        window.location.href = '/user'
+                        window.location.href = '/home'
                     }
                 }
             })
