--- a/src/resources/views/user.hbs
+++ b/src/resources/views/user.hbs
@@ -7,7 +7,7 @@
                 <h1 class="text-white">
                     Thông tin cá nhân				
                 </h1>	
-                <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="insurance.html"> User</a></p>
+                <p class="text-white link-nav"><a href="/home">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href=""> User</a></p>
             </div>	
         </div>
     </div>
