--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -26,11 +26,9 @@
                 <div class="form-select form-select-from" id="default-select">
                   <select name="from" id="select-from">
                     <option>Từ</option>
-                    <option value="DAD" class="option">Đà Nẵng (DAD)</option>
-                    <option value="HAN" class="option focus">Hà Nội (HAN)</option>
-                    <option value="NHA" class="option selected">Nha Trang (NHA)</option>
-                    <option value="HUI" class="option">Huế (HUI)</option>
-                    <option value="SGN" class="option">TP.Hồ Chí Minh (SGN)</option>
+                    {{#each airports}}
+                    <option value="{{this._id}}" class="option">{{this.city}} ({{this.code}})</option>
+                    {{/each}}
                   </select>
                 </div>
               </div>
@@ -39,18 +37,16 @@
                 <div class="form-select form-select-to" id="default-select">
                   <select name="to" id="select-to">
                     <option>Đến</option>
-                    <option value="DAD" class="option">Đà Nẵng (DAD)</option>
-                    <option value="HAN" class="option focus">Hà Nội (HAN)</option>
-                    <option value="NHA" class="option selected">Nha Trang (NHA)</option>
-                    <option value="HUI" class="option">Huế (HUI)</option>
-                    <option value="SGN" class="option">TP.Hồ Chí Minh (SGN)</option>
+                    {{#each airports}}
+                    <option value="{{this._id}}" class="option">{{this.city}} ({{this.code}})</option>
+                    {{/each}}
                   </select>
                 </div>
               </div>
               <input
                 type="text"
                 class="form-control date-picker"
-                name="start"
+                name="startDate"
                 placeholder="Ngày đi "
                 onfocus="this.placeholder = ''"
                 onblur="this.placeholder = 'Ngày đi '"
@@ -58,7 +54,7 @@
               <input
                 type="text"
                 class="form-control date-picker"
-                name="return"
+                name="returnDate"
                 placeholder="Ngày về "
                 onfocus="this.placeholder = ''"
                 onblur="this.placeholder = 'Ngày về '"
@@ -87,7 +83,7 @@
                   class="genric-btn success-border circle"
                 >Khứ hồi</a>
               </div>
-              <input type="checkbox" name="oneway" style="display: none">
+              <input type="checkbox" name="oneWay" style="display: none">
               <button type="submit" id="find-flight" class="primary-btn text-uppercase">Tìm Chuyến bay</button>
             </form>
           </div>
@@ -189,25 +185,28 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-      $('input[name=oneway]').prop('checked', true)
+      $('input[name=oneWay]').prop('checked', true)
+
       var oneWay = document.getElementById('btn-one-way')
       var roundTrip = document.getElementById('btn-round-trip')
-      $('input[name="return"]').css('display', 'none')
-      oneWay.addEventListener('click', ()=>{
-          oneWay.classList.add('success')
-          oneWay.classList.remove('success-border')
-          roundTrip.classList.remove('success')
-          roundTrip.classList.add('success-border')
-          $('input[name="return"]').css('display', 'none').val('')
-          $('input[name=oneway]').prop('checked', true)
+      $('input[name="returnDate"]').css('display', 'none')
+
+      oneWay.addEventListener('click', (e)=>{
+        e.preventDefault();
+        oneWay.classList.add('success')
+        oneWay.classList.remove('success-border')
+        roundTrip.classList.remove('success')
+        roundTrip.classList.add('success-border')
+        $('input[name="returnDate"]').css('display', 'none').val('')
+        $('input[name=oneWay]').prop('checked', true)
       })
       roundTrip.addEventListener('click', ()=>{
           roundTrip.classList.add('success')
           roundTrip.classList.remove('success-border')
           oneWay.classList.remove('success')
           oneWay.classList.add('success-border')
-          $('input[name="return"]').css('display', 'block')
-          $('input[name=oneway]').prop('checked', false)
+          $('input[name="returnDate"]').css('display', 'block')
+          $('input[name=oneWay]').prop('checked', false)
       })
 
       $('#find-flight').on('click', function(e){
@@ -217,11 +216,11 @@
             method: 'post',
             data: $('#form-search').serialize(),
             success: function (res) {
-                if (res) {
-                    alert(res)
+                if (res.err) {
+                  showToast(res.message, "error");
                 }
                 else {
-                    $('#form-search').submit()
+                  $('#form-search').submit()
                 }
             }
         })
